# documentation-search-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONFIG_MANAGEMENT_GUIDE.md  CONTRIBUTING.md  CURSOR_COMMUNITY_POST.md  DEMO_VIDEO_SCRIPT.md  DYNAMIC_CONFIG_ANALYSIS.md  HYBRID_SETUP_GUIDE.md  LIBRARY_GAP_ANALYSIS.md  PHASE1_ADDITIONS.md  PHASE2_AND_PHASE3_ADDITIONS.md  POPULARITY_IMPLEMENTATION_GUIDE.md  PUBLISHING_GUIDE.md  README.md  TECHNICAL_DEEP_DIVE.md  TEST_CURSOR_INTEGRATION.md  TEST_REPORT.md  VERSION_PARAMETER_IMPLEMENTATION_PLAN.md  config.json  config_manager.py  conftest.py  demo_usage.py  dynamic_enhancer.py  e2e_test_suite.py  enhanced_config.json  interactive_test.py  main.py  popularity_fetcher.py  popularity_tools.py  publish_instructions.md  publish_to_pypi.sh  pyproject.toml  quick_test.py  security_enhancements_proposal.md  security_implementation_summary.md  server.py  simple_config.json  sync_config.py  (+15 more)
.github/: dependabot.yml
.github/workflows/: build-site-index.yml  ci.yml  cloudflare-pages.yml  codeql.yml  release.yml  security-scan-example.yml  security.yml
pytest-test-project/: .gitignore  main.py  pyproject.toml
pytest-test-project/tests/: test_failing.py
src/documentation_search_enhanced/: __init__.py  backend_client.py  catalog_loader.py  config.json  config_manager.py  config_validator.py  content_enhancer.py  main.py  rate_limiter.py  reranker.py  smart_search.py  snyk_integration.py  vector_search.py  version_resolver.py  (+1 more)
website/: DEPLOYMENT.md  QUICK_DEPLOY.md  astro.config.mjs  package-lock.json  package.json
(+5 files in other folders)
